[package]
name = "cosmo_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.15"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
buddy_system_allocator = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.bootloader]
version = "0.9.8"
features = ["map_physical_memory"]

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = [
    "-device", 
    "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", 
    "stdio",
    "-display", 
    "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
